--- a/application-webcomponents/src/template-webcomponents/other-files/pages/home/home.component.html.template
+++ b/application-webcomponents/src/template-webcomponents/other-files/pages/home/home.component.html.template
@@ -8,7 +8,7 @@
     </strong>
 </h2>
 <div class="container-wco">
-    <a href="https://wizsolucoes.com.br/fenix-ds" class="btn btn-primary btn-sm mb-lg">
+    <a href="https://fenix.wizsolucoes.com.br" class="btn btn-primary btn-sm mb-lg">
         <span class="material-icons">home</span>
         conferir design system
     </a>
