--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "schematics:intall": "yarn --cwd ./application-webcomponents install",
     "schematics:build": "yarn --cwd ./application-webcomponents build",
     "schematics:link": "npm unlink ./application-webcomponents && npm link ./application-webcomponents",
-    "start:module": "ng serve --project sinaweb",
-    "extra:build": "ng build --project sinaweb --output-hashing none --aot --build-optimizer",
-    "extra:build:staging": "ng build --configuration=staging --project sinaweb --output-hashing none --aot --build-optimizer",
+    "start:module": "ng serve --project dmwdw",
+    "extra:build": "ng build --project dmwdw --output-hashing none --aot --build-optimizer",
+    "extra:build:staging": "ng build --configuration=staging --project dmwdw --output-hashing none --aot --build-optimizer",
     "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
@@ -26,7 +26,7 @@
     "@angular/common": "^16.2.10",
     "@angular/compiler": "^16.2.10",
     "@angular/core": "^16.2.10",
-    "@angular/elements": "^16.2.10",
+    "@angular/elements": "^16.2.11",
     "@angular/forms": "^16.2.10",
     "@angular/material": "^16.2.9",
     "@angular/platform-browser": "^16.2.10",
