--- a/package.json
+++ b/package.json
@@ -13,28 +13,28 @@
     "schematics:intall": "yarn --cwd ./application-webcomponents install",
     "schematics:build": "yarn --cwd ./application-webcomponents build",
     "schematics:link": "npm unlink ./application-webcomponents && npm link ./application-webcomponents",
-    "start:module": "ng serve --project dmwdw",
-    "extra:build": "ng build --project dmwdw --output-hashing none --aot --build-optimizer",
-    "extra:build:staging": "ng build --configuration=staging --project dmwdw --output-hashing none --aot --build-optimizer",
+    "start:module": "ng serve --project modle",
+    "extra:build": "ng build --project modle --output-hashing none --aot --build-optimizer",
+    "extra:build:staging": "ng build --configuration=staging --project modle --output-hashing none --aot --build-optimizer",
     "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
   "dependencies": {
     "@angular-architects/module-federation": "^16.0.4",
     "@angular/animations": "^16.2.10",
-    "@angular/cdk": "^16.2.9",
+    "@angular/cdk": "^16.2.11",
     "@angular/common": "^16.2.10",
     "@angular/compiler": "^16.2.10",
     "@angular/core": "^16.2.10",
-    "@angular/elements": "^16.2.11",
+    "@angular/elements": "^16.2.12",
     "@angular/forms": "^16.2.10",
-    "@angular/material": "^16.2.9",
+    "@angular/material": "^16.2.12",
     "@angular/platform-browser": "^16.2.10",
     "@angular/platform-browser-dynamic": "^16.2.10",
     "@angular/router": "^16.2.10",
     "@schematics/angular": "^16.2.7",
-    "@wizco/fenixds-core": "^1.0.5",
-    "@wizco/fenixds-ngx": "^1.0.5",
+    "@wizco/fenixds-core": "^1.0.12",
+    "@wizco/fenixds-ngx": "^1.0.12",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
     "updated": "^2.0.7",
