feat: Start modulo dentro de projects ou raiz do projeto

--- a/application-webcomponents/src/template-webcomponents/files/src/styles.__style__.template
+++ b/application-webcomponents/src/template-webcomponents/files/src/styles.__style__.template
@@ -1,5 +1,5 @@
 /* CSS global */
 
 
-/* Confira nosso design system fenix-ds.surge.sh */
+/* Confira nosso design system https://fenix.wizsolucoes.com.br */
 @import 'node_modules/@wizco/fenixds-core/styles/core';
