--- a/angular.json
+++ b/angular.json
@@ -74,10 +74,7 @@
 					"defaultConfiguration": "development"
 				},
 				"extract-i18n": {
-					"builder": "@angular-devkit/build-angular:extract-i18n",
-					"options": {
-						"browserTarget": "angular-schematics-webcomponents:build"
-					}
+					"builder": "@angular-devkit/build-angular:extract-i18n"
 				},
 				"test": {
 					"builder": "@angular-devkit/build-angular:karma",
@@ -100,35 +97,35 @@
 				}
 			}
 		},
-		"sinistro": {
+		"sinsitro": {
 			"projectType": "application",
 			"schematics": {
 				"@schematics/angular:component": {
 					"style": "scss"
 				}
 			},
-			"root": "projects/sinistro",
-			"sourceRoot": "projects/sinistro/src",
-			"prefix": "local",
+			"root": "",
+			"sourceRoot": "src",
+			"prefix": "sini",
 			"architect": {
 				"build": {
 					"builder": "ngx-build-plus:browser",
 					"options": {
-						"outputPath": "dist/sinistro",
-						"index": "projects/sinistro/src/index.html",
-						"main": "projects/sinistro/src/main.ts",
-						"polyfills": "projects/sinistro/src/polyfills.ts",
-						"tsConfig": "projects/sinistro/tsconfig.app.json",
+						"outputPath": "dist/sinsitro",
+						"index": "src/index.html",
+						"main": "src/main.ts",
+						"polyfills": "src/polyfills.ts",
+						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
 						"assets": [
-							"projects/sinistro/src/favicon.ico",
-							"projects/sinistro/src/assets"
+							"src/favicon.ico",
+							"src/assets"
 						],
 						"styles": [
-							"projects/sinistro/src/styles.scss"
+							"src/styles.scss"
 						],
 						"scripts": [],
-						"extraWebpackConfig": "projects/sinistro/webpack.config.js",
+						"extraWebpackConfig": "webpack.config.js",
 						"commonChunk": false
 					},
 					"configurations": {
@@ -147,12 +144,12 @@
 							],
 							"fileReplacements": [
 								{
-									"replace": "projects/sinistro/src/environments/environment.ts",
-									"with": "projects/sinistro/src/environments/environment.prod.ts"
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.prod.ts"
 								}
 							],
 							"outputHashing": "all",
-							"extraWebpackConfig": "projects/sinistro/webpack.prod.config.js"
+							"extraWebpackConfig": "webpack.prod.config.js"
 						},
 						"staging": {
 							"budgets": [
@@ -169,8 +166,8 @@
 							],
 							"fileReplacements": [
 								{
-									"replace": "projects/sinistro/src/environments/environment.ts",
-									"with": "projects/sinistro/src/environments/environment.staging.ts"
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.staging.ts"
 								}
 							],
 							"outputHashing": "all"
@@ -190,8 +187,8 @@
 							],
 							"fileReplacements": [
 								{
-									"replace": "projects/sinistro/src/environments/environment.ts",
-									"with": "projects/sinistro/src/environments/environment.sandbox.ts"
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.sandbox.ts"
 								}
 							],
 							"outputHashing": "all"
@@ -210,39 +207,35 @@
 				"serve": {
 					"builder": "ngx-build-plus:dev-server",
 					"options": {
-						"port": 9090,
-						"publicHost": "http://localhost:9090",
-						"extraWebpackConfig": "projects/sinistro/webpack.config.js"
+						"port": 4430,
+						"publicHost": "http://localhost:4430",
+						"extraWebpackConfig": "webpack.config.js"
 					},
 					"configurations": {
 						"production": {
-							"browserTarget": "sinistro:build:production",
-							"extraWebpackConfig": "projects/sinistro/webpack.prod.config.js"
+							"browserTarget": "sinsitro:build:production",
+							"extraWebpackConfig": "webpack.prod.config.js"
 						},
 						"development": {
-							"browserTarget": "sinistro:build:development"
+							"browserTarget": "sinsitro:build:development"
 						}
 					},
 					"defaultConfiguration": "development"
 				},
 				"extract-i18n": {
-					"builder": "ngx-build-plus:extract-i18n",
-					"options": {
-						"browserTarget": "sinistro:build",
-						"extraWebpackConfig": "projects/sinistro/webpack.config.js"
-					}
+					"builder": "@angular-devkit/build-angular:extract-i18n"
 				},
 				"test": {
 					"builder": "ngx-build-plus:karma",
 					"options": {
-						"main": "projects/sinistro/src/test.ts",
-						"polyfills": "projects/sinistro/src/polyfills.ts",
-						"tsConfig": "projects/sinistro/tsconfig.spec.json",
-						"karmaConfig": "projects/sinistro/karma.conf.js",
+						"main": "src/test.ts",
+						"polyfills": "src/polyfills.ts",
+						"tsConfig": "tsconfig.spec.json",
+						"karmaConfig": "karma.conf.js",
 						"inlineStyleLanguage": "scss",
 						"assets": [
-							"projects/sinistro/src/favicon.ico",
-							"projects/sinistro/src/assets"
+							"src/favicon.ico",
+							"src/assets"
 						],
 						"styles": [
 							"src/styles.scss"
@@ -252,6 +245,5 @@
 				}
 			}
 		}
-	},
-	"defaultProject": "angular-schematics-webcomponents"
+	}
 }
