--- a/application-webcomponents/src/template-webcomponents/files/src/bootstrap.ts.template
+++ b/application-webcomponents/src/template-webcomponents/files/src/bootstrap.ts.template
@@ -2,12 +2,12 @@ import { platformBrowser } from '@angular/platform-browser';
 import { AppModule } from './app/app.module';
 declare const require: any;
 
-const ngVersion = require('../../../package.json').dependencies[
+const ngVersion = require('<%= pathPackage %>').dependencies[
   '@angular/core'
 ]; // better just take the major version
 
 function getMajor(version: string) {
-  return version.split('.')[1].replace(/[^0-9]/g, '');
+  return version.split('.')[0].replace(/[^0-9]/g, '');
 }
 
 const plattform = (window as any).plattform || {};
@@ -21,6 +21,7 @@ Object.keys(plattform).forEach((key) => {
 
 if (!platform) {
   platform = platformBrowser();
+  (window as any).plattform[ngVersion] = platform;
 }
 
-platform.bootstrapModule(AppModule).catch((err: any) => console.error(err));
+platform.bootstrapModule(AppModule, { ngZone: (window as any).ngZone }).catch((err: any) => console.error(err));
