--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "schematics:intall": "yarn --cwd ./application-webcomponents install",
     "schematics:build": "yarn --cwd ./application-webcomponents build",
     "schematics:link": "npm unlink ./application-webcomponents && npm link ./application-webcomponents",
-    "start:module": "ng serve --project sinistro",
-    "extra:build": "ng build --project sinistro --output-hashing none --aot --build-optimizer",
-    "extra:build:staging": "ng build --configuration=staging --project sinistro --output-hashing none --aot --build-optimizer",
+    "start:module": "ng serve --project sinsitro",
+    "extra:build": "ng build --project sinsitro --output-hashing none --aot --build-optimizer",
+    "extra:build:staging": "ng build --configuration=staging --project sinsitro --output-hashing none --aot --build-optimizer",
     "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
   "dependencies": {
     "@angular-architects/module-federation": "^17.0.2",
+    "@angular-eslint/schematics": "^17.2.1",
     "@angular/animations": "^17.1.2",
     "@angular/cdk": "^17.1.2",
     "@angular/common": "^17.1.2",
@@ -33,16 +34,15 @@
     "@angular/platform-browser-dynamic": "^17.1.2",
     "@angular/router": "^17.1.2",
     "@schematics/angular": "^16.2.7",
-    "@wizco/fenixds-core": "^1.0.12",
-    "@wizco/fenixds-ngx": "^1.0.12",
+    "@wizco/fenixds-core": "^1.0.22",
+    "@wizco/fenixds-ngx": "^17.0.19",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
-    "updated": "^2.0.7",
-    "zone.js": "~0.14.0"
+    "zone.js": "^0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.1.2",
-    "@angular/cli": "^16.2.7",
+    "@angular/cli": "^17.1.2",
     "@angular/compiler-cli": "^17.1.2",
     "@types/jasmine": "~5.1.1",
     "jasmine-core": "~5.1.1",
