Adiciona módulo e atualizações de configuração***
***Adiciona módulo 'WizproTools' e atualizações de configuração para o módulo 'modulo'.

--- a/application-webcomponents/src/template-pipeline-ci/root-files/azure-pipelines.yml
+++ b/application-webcomponents/src/template-pipeline-ci/root-files/azure-pipelines.yml
@@ -30,6 +30,7 @@ extends:
     azSubscriptionUAT: "WX1"
     azSubscriptionPRD: "WX1"
     instrumentationKey: "c9dd9600-aa5b-4a28-9fd7-5e472cd30899"
+    npmNodeVersion: '18'
     appConfig:
       httpPath: "modulo"
       httpPathModule: "<%= folderName%>"
