--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,7 +1,7 @@
 {
-  "path": "sinis",
-  "moduleName": "sinsitro",
-  "elementName": "wc-sinsitro-module",
+  "path": "/home",
+  "moduleName": "modulo",
+  "elementName": "wc-modulo-module",
   "type": "web-components",
   "exposedModule": "./web-components",
   "layout": "dashboard"
