--- a/application-webcomponents/src/template-webcomponents/other-files/app.module.ts.template
+++ b/application-webcomponents/src/template-webcomponents/other-files/app.module.ts.template
@@ -1,10 +1,9 @@
-import { CUSTOM_ELEMENTS_SCHEMA, Injector, NgModule } from '@angular/core';
+import { CUSTOM_ELEMENTS_SCHEMA, Injector, NgModule, DoBootstrap } from '@angular/core';
 import { createCustomElement } from '@angular/elements';
 import { BrowserModule } from '@angular/platform-browser';
 import { BrowserAnimationsModule } from '@angular/platform-browser/animations';
 import { RouterModule } from '@angular/router';
 import { HttpClientModule } from '@angular/common/http';
-
 
 import { AppComponent } from './app.component';
 import { WidgetComponent } from './components/widget/widget.component';
@@ -22,10 +21,6 @@ import { WidgetComponent } from './components/widget/widget.component';
       {
         path: '<%= path %>',
         loadChildren: () => import('./routes').then((m) => m.APP_ROUTES)
-      },
-      {
-        path: '**',
-        redirectTo: '<%= path %>'
       }
     ])
   ],
@@ -33,7 +28,7 @@ import { WidgetComponent } from './components/widget/widget.component';
   schemas: [CUSTOM_ELEMENTS_SCHEMA]
 })
 
-export class AppModule {
+export class AppModule implements DoBootstrap {
   constructor(
     private injector: Injector
   ) {}
