--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "schematics:intall": "yarn --cwd ./application-webcomponents install",
     "schematics:build": "yarn --cwd ./application-webcomponents build",
     "schematics:link": "npm unlink ./application-webcomponents && npm link ./application-webcomponents",
-    "start:module": "ng serve --project sinsitro",
-    "extra:build": "ng build --project sinsitro --output-hashing none --aot --build-optimizer",
-    "extra:build:staging": "ng build --configuration=staging --project sinsitro --output-hashing none --aot --build-optimizer",
-    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
+    "wiztools:publish": "ng build wizpro-tools && npm publish ./dist/wizpro-tools",
+    "start:module": "ng serve --project modulo",
+    "extra:build": "ng build --project modulo --output-hashing none --aot --build-optimizer",
+    "extra:build:staging": "ng build --configuration=staging --project modulo --output-hashing none --aot --build-optimizer",
+    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular-architects/module-federation": "^17.0.2",
-    "@angular-eslint/schematics": "^17.2.1",
+    "@angular-architects/module-federation": "^17.0.1",
     "@angular/animations": "^17.1.2",
     "@angular/cdk": "^17.1.2",
     "@angular/common": "^17.1.2",
@@ -42,15 +43,24 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.1.2",
+    "@angular-eslint/builder": "17.2.1",
+    "@angular-eslint/eslint-plugin": "17.2.1",
+    "@angular-eslint/eslint-plugin-template": "17.2.1",
+    "@angular-eslint/schematics": "17.2.1",
+    "@angular-eslint/template-parser": "17.2.1",
     "@angular/cli": "^17.1.2",
     "@angular/compiler-cli": "^17.1.2",
     "@types/jasmine": "~5.1.1",
+    "@typescript-eslint/eslint-plugin": "6.19.0",
+    "@typescript-eslint/parser": "6.19.0",
+    "eslint": "^8.56.0",
     "jasmine-core": "~5.1.1",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^17.1.0",
     "ngx-build-plus": "^17.0.0",
     "typescript": "~5.3.3"
   }
