feat: implementando wizprotools

--- a/application-webcomponents/src/template-mfe-final-change/files-webpack/webpack.config.js.template
+++ b/application-webcomponents/src/template-mfe-final-change/files-webpack/webpack.config.js.template
@@ -39,6 +39,7 @@ module.exports = {
         "@angular/common": { requiredVersion: "auto" },
         "@angular/router": { requiredVersion: "auto" },
         "rxjs": { requiredVersion: "auto" },
+        "@wizco/wizpro-tools": { requiredVersion: "auto" },
         ...sharedMappings.getDescriptors()
       })
     }),
