--- a/libs/wizpro-tools/package.json
+++ b/libs/wizpro-tools/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@wizco/wizpro-tools",
-  "version": "17.0.7",
+  "version": "17.0.10",
   "peerDependencies": {
-    "jwt-decode": "^3.1.2"
+    "jwt-decode": "3.1.2"
   },
   "dependencies": {
     "tslib": "^2.3.0"
@@ -21,5 +21,5 @@
   "bugs": {
     "url": "https://github.com/wizsolucoes/web-components-schematic/issues"
   },
-  "homepage": "https://github.com/wizsolucoes/web-components-schematic#readme",
+  "homepage": "https://github.com/wizsolucoes/web-components-schematic#readme"
 }
