feat: testando components e projects separadamente

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,23 +13,9 @@
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
-        "@angular-eslint/directive-selector": [
-          "error",
-          {
-            "type": "attribute",
-            "prefix": "app",
-            "style": "camelCase"
-          }
-        ],
+        "@angular-eslint/directive-selector": "off",
         "@typescript-eslint/no-explicit-any": "off",
-        "@angular-eslint/component-selector": [
-          "error",
-          {
-            "type": "element",
-            "prefix": "app",
-            "style": "kebab-case"
-          }
-        ]
+        "@angular-eslint/component-selector": "off"
       }
     },
     {
