--- a/angular.json
+++ b/angular.json
@@ -65,10 +65,10 @@
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
 						"production": {
-							"browserTarget": "angular-schematics-webcomponents:build:production"
+							"buildTarget": "angular-schematics-webcomponents:build:production"
 						},
 						"development": {
-							"browserTarget": "angular-schematics-webcomponents:build:development"
+							"buildTarget": "angular-schematics-webcomponents:build:development"
 						}
 					},
 					"defaultConfiguration": "development"
@@ -96,39 +96,193 @@
 					}
 				}
 			}
-    },
-    "wizpro-tools": {
-      "projectType": "library",
-      "root": "libs/wizpro-tools",
-      "sourceRoot": "libs/wizpro-tools/src",
-      "prefix": "lib",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:ng-packagr",
-          "options": {
-            "project": "libs/wizpro-tools/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "libs/wizpro-tools/tsconfig.lib.prod.json"
-            },
-            "development": {
-              "tsConfig": "libs/wizpro-tools/tsconfig.lib.json"
-            }
-          },
-          "defaultConfiguration": "production"
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "tsConfig": "libs/wizpro-tools/tsconfig.spec.json",
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ]
-          }
-        }
-      }
-    }
+		},
+		"wizpro-tools": {
+			"projectType": "library",
+			"root": "libs/wizpro-tools",
+			"sourceRoot": "libs/wizpro-tools/src",
+			"prefix": "lib",
+			"architect": {
+				"build": {
+					"builder": "@angular-devkit/build-angular:ng-packagr",
+					"options": {
+						"project": "libs/wizpro-tools/ng-package.json"
+					},
+					"configurations": {
+						"production": {
+							"tsConfig": "libs/wizpro-tools/tsconfig.lib.prod.json"
+						},
+						"development": {
+							"tsConfig": "libs/wizpro-tools/tsconfig.lib.json"
+						}
+					},
+					"defaultConfiguration": "production"
+				},
+				"test": {
+					"builder": "@angular-devkit/build-angular:karma",
+					"options": {
+						"tsConfig": "libs/wizpro-tools/tsconfig.spec.json",
+						"polyfills": [
+							"zone.js",
+							"zone.js/testing"
+						]
+					}
+				}
+			}
+		},
+		"botafogo": {
+			"projectType": "application",
+			"schematics": {
+				"@schematics/angular:component": {
+					"style": "scss"
+				}
+			},
+			"root": "projects/botafogo",
+			"sourceRoot": "projects/botafogo/src",
+			"prefix": "bfg",
+			"architect": {
+				"build": {
+					"builder": "ngx-build-plus:browser",
+					"options": {
+						"outputPath": "dist/botafogo",
+						"index": "projects/botafogo/src/index.html",
+						"main": "projects/botafogo/src/main.ts",
+						"polyfills": "projects/botafogo/src/polyfills.ts",
+						"tsConfig": "projects/botafogo/tsconfig.app.json",
+						"inlineStyleLanguage": "scss",
+						"assets": [
+							"projects/botafogo/src/favicon.ico",
+							"projects/botafogo/src/assets"
+						],
+						"styles": [
+							"projects/botafogo/src/styles.scss"
+						],
+						"scripts": [],
+						"extraWebpackConfig": "projects/botafogo/webpack.config.js",
+						"commonChunk": false
+					},
+					"configurations": {
+						"production": {
+							"budgets": [
+								{
+									"type": "initial",
+									"maximumWarning": "500kb",
+									"maximumError": "2mb"
+								},
+								{
+									"type": "anyComponentStyle",
+									"maximumWarning": "2kb",
+									"maximumError": "2mb"
+								}
+							],
+							"fileReplacements": [
+								{
+									"replace": "projects/botafogo/src/environments/environment.ts",
+									"with": "projects/botafogo/src/environments/environment.prod.ts"
+								}
+							],
+							"outputHashing": "all",
+							"extraWebpackConfig": "projects/botafogo/webpack.prod.config.js"
+						},
+						"staging": {
+							"budgets": [
+								{
+									"type": "initial",
+									"maximumWarning": "500kb",
+									"maximumError": "2mb"
+								},
+								{
+									"type": "anyComponentStyle",
+									"maximumWarning": "2kb",
+									"maximumError": "2mb"
+								}
+							],
+							"fileReplacements": [
+								{
+									"replace": "projects/botafogo/src/environments/environment.ts",
+									"with": "projects/botafogo/src/environments/environment.staging.ts"
+								}
+							],
+							"outputHashing": "all"
+						},
+						"sandbox": {
+							"budgets": [
+								{
+									"type": "initial",
+									"maximumWarning": "500kb",
+									"maximumError": "2mb"
+								},
+								{
+									"type": "anyComponentStyle",
+									"maximumWarning": "2kb",
+									"maximumError": "2mb"
+								}
+							],
+							"fileReplacements": [
+								{
+									"replace": "projects/botafogo/src/environments/environment.ts",
+									"with": "projects/botafogo/src/environments/environment.sandbox.ts"
+								}
+							],
+							"outputHashing": "all"
+						},
+						"development": {
+							"buildOptimizer": false,
+							"optimization": false,
+							"vendorChunk": true,
+							"extractLicenses": false,
+							"sourceMap": true,
+							"namedChunks": true
+						}
+					},
+					"defaultConfiguration": "production"
+				},
+				"serve": {
+					"builder": "ngx-build-plus:dev-server",
+					"options": {
+						"port": 7878,
+						"publicHost": "http://localhost:7878",
+						"extraWebpackConfig": "projects/botafogo/webpack.config.js"
+					},
+					"configurations": {
+						"production": {
+							"buildTarget": "botafogo:build:production",
+							"extraWebpackConfig": "projects/botafogo/webpack.prod.config.js"
+						},
+						"development": {
+							"buildTarget": "botafogo:build:development"
+						}
+					},
+					"defaultConfiguration": "development"
+				},
+				"lint": {
+					"builder": "@angular-eslint/builder:lint",
+					"options": {
+						"lintFilePatterns": [
+							"projects/botafogo/src/**/*.ts",
+							"projects/botafogo/src/**/*.html"
+						]
+					}
+				},
+				"test": {
+					"builder": "ngx-build-plus:karma",
+					"options": {
+						"main": "projects/botafogo/src/test.ts",
+						"polyfills": "projects/botafogo/src/polyfills.ts",
+						"tsConfig": "projects/botafogo/tsconfig.spec.json",
+						"karmaConfig": "projects/botafogo/karma.conf.js",
+						"inlineStyleLanguage": "scss",
+						"assets": [
+							"projects/botafogo/src/favicon.ico",
+							"projects/botafogo/src/assets"
+						],
+						"styles": [
+							"src/styles.scss"
+						],
+						"scripts": []
+					}
+				}
+			}
+		}
 	}
 }
