--- a/application-webcomponents/src/template-mfe-final-change/files-webpack/webpack.config.js.template
+++ b/application-webcomponents/src/template-mfe-final-change/files-webpack/webpack.config.js.template
@@ -6,7 +6,7 @@ const share = mf.share;
 
 const sharedMappings = new mf.SharedMappings();
 sharedMappings.register(
-  path.join(__dirname, '../../tsconfig.json'),
+  path.join(__dirname, '<%= pathPackage %>'),
   [/* mapped paths to share */]);
 
 module.exports = {
@@ -31,8 +31,8 @@ module.exports = {
       name: "<%= name %>",
       filename: "remoteEntry.js",
       exposes: {
-        './web-components': './projects/<%= name %>/src/bootstrap.ts',
-        './routes': './projects/<%= name %>/src/app/routes.ts',
+        './web-components': '<%= pathExposes %>/bootstrap.ts',
+        './routes': '<%= pathExposes %>/app/routes.ts',
       },
       shared: share({
         "@angular/core": { requiredVersion: "auto" },
