--- a/application-webcomponents/src/template-webcomponents/files/src/bootstrap.ts.template
+++ b/application-webcomponents/src/template-webcomponents/files/src/bootstrap.ts.template
@@ -7,7 +7,7 @@ const ngVersion = require('<%= pathPackage %>').dependencies[
 ]; // better just take the major version
 
 function getMajor(version: string) {
-  return version.split('.')[0].replace(/[^0-9]/g, '');
+  return version.replace(/[^0-9]/g, '');
 }
 
 const plattform = (window as any).plattform || {};
@@ -21,7 +21,12 @@ Object.keys(plattform).forEach((key) => {
 
 if (!platform) {
   platform = platformBrowser();
+  if (!(window as any).plattform) {
+    (window as any).plattform = {};
+  }
   (window as any).plattform[ngVersion] = platform;
 }
 
-platform.bootstrapModule(AppModule, { ngZone: (window as any).ngZone }).catch((err: any) => console.error(err));
+platform.bootstrapModule(AppModule, { ngZone: (window as any).ngZone }).catch((err: any) => {
+  console.error(err);
+});
