--- a/application-webcomponents/src/template-webcomponents/other-files/app.module.ts.template
+++ b/application-webcomponents/src/template-webcomponents/other-files/app.module.ts.template
@@ -3,7 +3,7 @@ import { createCustomElement } from '@angular/elements';
 import { BrowserModule } from '@angular/platform-browser';
 import { BrowserAnimationsModule } from '@angular/platform-browser/animations';
 import { RouterModule } from '@angular/router';
-import { HttpClientModule } from '@angular/common/http';
+import { HTTP_INTERCEPTORS, HttpClientModule } from '@angular/common/http';
 
 import { AppComponent } from './app.component';
 import { WidgetComponent } from './components/widget/widget.component';
