--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "schematics:build": "yarn --cwd ./application-webcomponents build",
     "schematics:link": "npm unlink ./application-webcomponents && npm link ./application-webcomponents",
     "wiztools:publish": "ng build wizpro-tools && npm publish ./dist/wizpro-tools",
-    "start:module": "ng serve --project modulo",
-    "extra:build": "ng build --project modulo --output-hashing none --aot --build-optimizer",
-    "extra:build:staging": "ng build --configuration=staging --project modulo --output-hashing none --aot --build-optimizer",
+    "start:module": "ng serve --project botafogo",
+    "extra:build": "ng build --project botafogo --output-hashing none --aot --build-optimizer",
+    "extra:build:staging": "ng build --configuration=staging --project botafogo --output-hashing none --aot --build-optimizer",
     "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js",
     "lint": "ng lint"
   },
@@ -24,19 +24,20 @@
   "dependencies": {
     "@angular-architects/module-federation": "^17.0.1",
     "@angular/animations": "^17.1.2",
-    "@angular/cdk": "^17.1.2",
+    "@angular/cdk": "^17.2.0",
     "@angular/common": "^17.1.2",
     "@angular/compiler": "^17.1.2",
     "@angular/core": "^17.1.2",
     "@angular/elements": "^17.1.2",
     "@angular/forms": "^17.1.2",
-    "@angular/material": "^17.1.2",
     "@angular/platform-browser": "^17.1.2",
     "@angular/platform-browser-dynamic": "^17.1.2",
     "@angular/router": "^17.1.2",
     "@schematics/angular": "^16.2.7",
     "@wizco/fenixds-core": "^1.0.22",
     "@wizco/fenixds-ngx": "^17.0.19",
+    "@wizco/wizpro-tools": "^17.0.10",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "^0.14.3"
