--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "private": true,
   "dependencies": {
     "@angular-architects/module-federation": "^17.0.1",
+    "@angular-architects/module-federation-tools": "^17.0.7",
     "@angular/animations": "^17.1.2",
     "@angular/cdk": "^17.2.0",
     "@angular/common": "^17.1.2",
