chore: platform bronwser

--- a/application-webcomponents/src/template-webcomponents/files/src/bootstrap.ts.template
+++ b/application-webcomponents/src/template-webcomponents/files/src/bootstrap.ts.template
@@ -1,32 +1,10 @@
-import { platformBrowser } from '@angular/platform-browser';
 import { AppModule } from './app/app.module';
-declare const require: any;
+import { environment } from './environments/environment';
+import { bootstrap } from '@angular-architects/module-federation-tools';
 
-const ngVersion = require('<%= pathPackage %>').dependencies[
-  '@angular/core'
-]; // better just take the major version
-
-function getMajor(version: string) {
-  return version.replace(/[^0-9]/g, '');
-}
-
-const plattform = (window as any).plattform || {};
-
-let platform: any;
-Object.keys(plattform).forEach((key) => {
-  if (getMajor(ngVersion) === getMajor(key)) {
-    platform = plattform[key];
-  }
-});
-
-if (!platform) {
-  platform = platformBrowser();
-  if (!(window as any).plattform) {
-    (window as any).plattform = {};
-  }
-  (window as any).plattform[ngVersion] = platform;
-}
-
-platform.bootstrapModule(AppModule, { ngZone: (window as any).ngZone }).catch((err: any) => {
-  console.error(err);
+bootstrap(AppModule, {
+  production: environment.production,
+  appType: 'microfrontend',
+  activeLegacyMode: true,
+  ngZoneSharing: true
 });
