fix: config.json com erro

--- a/application-webcomponents/src/template-webcomponents/files/src/assets/config.json.template
+++ b/application-webcomponents/src/template-webcomponents/files/src/assets/config.json.template
@@ -5,7 +5,7 @@
   "type": "web-components",
   "exposedModule": "./web-components",
   "breadcrumb": "<%= name %>",
-  "layout": "dashboard"
+  "layout": "dashboard",
   "title": "add um título no arquivo config.json",
   "description": "add um descrição no arquivo config.json",
   "icon": "Adiciona um ícone do IconMaterial",
